/**
 * End-to-end tests for `elm-pages run --coverage`.
 *
 * Runs a real elm-pages script with --coverage and asserts on the actual
 * user-visible output (console + lcov.info), approval-style.
 *
 * To update snapshots:
 *   npx vitest run generator/test/coverage-e2e/coverage.test.js --update
 */

import { describe, it, expect, beforeAll } from "vitest";
import * as fs from "node:fs";
import * as path from "node:path";
import { spawnSync } from "node:child_process";
import { fileURLToPath } from "node:url";

const __dirname = path.dirname(fileURLToPath(import.meta.url));
const fixtureDir = path.resolve(__dirname, "fixture");
const cliPath = path.resolve(__dirname, "..", "..", "src", "cli.js");

/** Replace machine-specific absolute paths with a placeholder. */
function normalize(text) {
  return text
    .replaceAll(fixtureDir, "<FIXTURE>")
    .replace(/\x1b\[[0-9;]*m/g, "")  // strip ANSI
    .replace(/data-\d+\.json/g, "data-PID.json");  // normalize PID in filenames
}

function runCoverage(extraArgs = []) {
  // Clean previous run
  for (const dir of [".coverage", "coverage", "elm-stuff/elm-pages"]) {
    fs.rmSync(path.join(fixtureDir, dir), { recursive: true, force: true });
  }

  const result = spawnSync(
    "node",
    [cliPath, "run", "src/RunGreet.elm", "--coverage", ...extraArgs],
    { cwd: fixtureDir, encoding: "utf-8", timeout: 120_000 }
  );

  const consoleOutput = normalize((result.stdout || "") + (result.stderr || ""));

  const lcovPath = path.join(fixtureDir, "coverage", "lcov.info");
  const lcovContent = fs.existsSync(lcovPath)
    ? normalize(fs.readFileSync(lcovPath, "utf-8"))
    : undefined;

  return { consoleOutput, lcovContent };
}

describe("elm-pages run --coverage", () => {
  let result;
  beforeAll(() => { result = runCoverage(); }, 120_000);

  it("console output matches snapshot", () => {
    expect(result.consoleOutput).toMatchSnapshot();
  });

  it("lcov.info matches snapshot", () => {
    expect(result.lcovContent).toBeDefined();
    expect(result.lcovContent).toMatchSnapshot();
  });
});

describe("elm-pages run --coverage --coverage-exclude", () => {
  let result;
  beforeAll(() => { result = runCoverage(["--coverage-exclude", "lib"]); }, 120_000);

  it("console output excludes Greet module", () => {
    expect(result.consoleOutput).toMatchSnapshot();
    // Greet is in lib/, which is excluded — should not appear as its own module
    expect(result.consoleOutput).not.toMatch(/^\s+Greet\s/m);
    // RunGreet is in src/, which is still included
    expect(result.consoleOutput).toContain("RunGreet");
  });

  it("lcov.info only contains non-excluded modules", () => {
    expect(result.lcovContent).toBeDefined();
    expect(result.lcovContent).toMatchSnapshot();
    expect(result.lcovContent).not.toContain("lib/Greet.elm");
    expect(result.lcovContent).toContain("RunGreet.elm");
  });
});

describe("elm-pages run --coverage --coverage-include", () => {
  let result;
  beforeAll(() => { result = runCoverage(["--coverage-include", "lib"]); }, 120_000);

  it("console output only includes Greet module", () => {
    expect(result.consoleOutput).toMatchSnapshot();
    expect(result.consoleOutput).toContain("Greet");
    expect(result.consoleOutput).not.toMatch(/\bRunGreet\b/);
  });

  it("lcov.info only contains included modules", () => {
    expect(result.lcovContent).toBeDefined();
    expect(result.lcovContent).toMatchSnapshot();
    expect(result.lcovContent).toContain("Greet.elm");
    expect(result.lcovContent).not.toContain("RunGreet.elm");
  });
});
